--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "compilerOptions": {
+    "isolatedModules": true
+  },
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "prisma": {
+    "seed": "tsx ./prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +26,7 @@
     "@fastify/cors": "^8.3.0",
     "@fastify/multipart": "^7.7.3",
     "@prisma/client": "5.2.0",
+    "ai": "^2.2.12",
     "dotenv": "^16.3.1",
     "fastify": "^4.23.0",
     "openai": "^4.6.0",
